--- a/public/index.html
+++ b/public/index.html
@@ -21,5 +21,17 @@
       padding: 0;
       height: 100%;
     }
+    .el-tooltip__popper{
+      background: rgba(255, 255, 255, 0.25)!important;
+      font-weight: 400 !important;
+      letter-spacing: 1px;
+      color: rgba(0,0,0,0.4);
+    }
+    .el-tooltip__popper[x-placement^=right] .popper__arrow::after{
+      border-right-color:rgba(255, 255, 255, 0.15)!important;
+    }
+    .el-tooltip__popper[x-placement^=right] .popper__arrow{
+      border-right-color:rgba(255, 255, 255, 0.15)!important;
+    }
   </style>
 </html>
